# happ-build-tutorial

./: .gitignore  Cargo.toml  README.md  default.nix
.github/workflows/: main.yml
demo.dna.workdir/: dna.json
tests/: package-lock.json  package.json
tests/src/: index.ts
workdir/dna/: demo-dna.dna  dna.yaml  test-dna.dna
workdir/happ/: demo-happ.happ  happ.yaml
zomes/foo/: Cargo.toml
zomes/foo/src/: lib.rs
zomes/numbers/: Cargo.toml
zomes/numbers/src/: lib.rs
zomes/whoami/: Cargo.toml
zomes/whoami/src/: lib.rs
